# Linux-Chat-Application

./: CMakeLists.txt  Makefile  README.md  c_cli_app.c
common/: CMakeLists.txt
common/inc/: app_cli.h  app_socket.h  user_config.h
common/src/: app_cli.c  app_socket.c
main/: CMakeLists.txt  app.c
